--- a/web/src/assets/index.css
+++ b/web/src/assets/index.css
@@ -1,8 +1,11 @@
+html {
+  margin: 0 auto;
+  max-width: 900px;
+}
+
 body {
   margin: 0 auto;
   text-align: center;
-  background: #282c34;
-  color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,3 +16,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New' monospace;
 }
+
+
