--- a/web/src/assets/index.css
+++ b/web/src/assets/index.css
@@ -1,20 +1,42 @@
 html {
   margin: 0 auto;
   max-width: 900px;
+  padding: 20px 0;
 }
 
 body {
+  background: #222629;
+  color: #D4D4DC;
   margin: 0 auto;
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New' monospace;
+h1 { 
+  font-size: 1.5em;
+}
+
+h2 { 
+  font-size: 1.17em;
+}
+
+h3 { 
+  font-size: 1em;
+}
+
+h4 { 
+  font-size: .83em;
+}
+
+.container { 
+  margin-top: 20px;
+}
+
+.card { 
+  background: #393F4D;
+  border: 1px solid #1D1E22;
+  padding: 5px;
 }
 
 
