--- a/web/src/assets/index.css
+++ b/web/src/assets/index.css
@@ -39,4 +39,10 @@ h4 {
   padding: 5px;
 }
 
-
+/* 
+Yellow: #FEDA6A
+Light gray: #D4D4DC
+Gray: #393F4D
+Dark gray: #222629
+Dark Slate: #1D1E22 
+*/
